Particles: too many virtual parents + non-100 display% = crash #44268

Closed
opened 2015-04-04 23:28:55 +02:00 by Jason Clarke · 7 comments

System Information
Mac OS X 10.10.2, AMD 5770

Blender Version
Broken: 2.74.3 59df941

Short description of error
If you have a particle system with virtual parents above a certain threshold, and display % set below 100%, Blender will crash when you try to render the particle system.

Exact steps for others to reproduce the error

  1. Load attached particle_disp_crash_2.blend

  2. Hit F12 and note that Blender immediately crashes.

  3. Reload the file, either turn virtual parents down/off, or change display % to 100%. Render again, Blender will now render successfully.

particle_disp_crash_2.blend

**System Information** Mac OS X 10.10.2, AMD 5770 **Blender Version** Broken: 2.74.3 59df941 **Short description of error** If you have a particle system with virtual parents above a certain threshold, and display % set below 100%, Blender will crash when you try to render the particle system. **Exact steps for others to reproduce the error** 1. Load attached particle_disp_crash_2.blend 2. Hit F12 and note that Blender immediately crashes. 3. Reload the file, either turn virtual parents down/off, or change display % to 100%. Render again, Blender will now render successfully. [particle_disp_crash_2.blend](https://archive.blender.org/developer/F158247/particle_disp_crash_2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke
Lukas Tönne was assigned by Sergey Sharybin 2015-04-07 10:35:06 +02:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

Developer note:

This is a mis-counting of child/parent particles in initialization and actual path calculation caused by mixed checks like (psys->renderdata || G.is_rendering) and psys->renderdata. I think we should get rid of this G.is_rendering in order to help new depsgraph as well. Here's a patch which is "works for me" (tm), but not sure what sideeffects it might cause: fix_T44268.patch

@LukasTonne, mind having a second look here?

Developer note: This is a mis-counting of child/parent particles in initialization and actual path calculation caused by mixed checks like `(psys->renderdata || G.is_rendering)` and `psys->renderdata`. I think we should get rid of this `G.is_rendering` in order to help new depsgraph as well. Here's a patch which is "works for me" (tm), but not sure what sideeffects it might cause: [fix_T44268.patch](https://archive.blender.org/developer/F159369/fix_T44268.patch) @LukasTonne, mind having a second look here?

This issue was referenced by 4b685e1b90

This issue was referenced by 4b685e1b90c555a222d524b16a482913865683aa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4b685e1b90.

Closed by commit 4b685e1b90.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44268
No description provided.